@@ -97,6 +97,11 @@ Other changes:
 - Examples: Vulkan: Added various optional helpers in imgui_impl_vulkan.h (they are used for multi-viewport support)
   to make the examples main.cpp easier to read.
 
+Other Changes:
+- Misc: Added ImGuiMouseCursor_NotAllowed enum so it can be used by more shared widgets. [@rokups]
+- Backends: GLFW, SDL, Win32, OSX, Allegro: Added support for ImGuiMouseCursor_NotAllowed. [@rokups]
+- Backends: GLFW: Added support for the missing mouse cursors newly added in GLFW 3.4+. [@rokups]
+
 
 -----------------------------------------------------------------------
  VERSION 1.74 (Released 2019-11-25)
